Fix font family on iphone

--- a/src/content/Projects.css
+++ b/src/content/Projects.css
@@ -12,7 +12,7 @@
   flex-wrap: wrap;
   margin: 0;
   cursor: pointer;
-  font-family: Calibri Light;
+  font-family: Calibri Light, sans-serif;
   font-size: 1.5em;
   overflow: hidden;
 }
